# Experiential-Entrepreneurship

./: .gitignore  ANTIGRAVITY.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  README.vi.md  main.py  skills-lock.json
.antigravitycli/: c393074f-9a5e-4149-baf7-5887d4ca7a9a.json
ai/: .env.example  README.md  main.py  pyproject.toml
ai/src/: __init__.py  config.py  llm.py  schemas.py
ai/src/agents/: __init__.py  content_generator.py  content_regenerator.py  optimizer.py  platform_formatter.py  trend_research.py
ai/src/api/: __init__.py  routes.py
ai/src/platform/: __init__.py  trends_mcp.py
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  pom.xml
docs/: Business_Analysis.md  Implementation_Strategy.md  PLAN.md  REQUIREMENTS.md  ROADMAP_FUTURE.md  refactor1.md
frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  rule.md  vite.config.ts
frontend/src/: App.tsx  createData.ts  data.ts  i18n.ts  index.css  main.tsx  statusTokens.ts  theme.ts  trendsData.ts  trendsLive.ts  types.ts  vite-env.d.ts
frontend/src/api/: admin.ts  adminAi.ts  adminApiVersions.ts  adminUsage.ts  analytics.ts  apiClient.ts  auth.ts  brandProfile.ts  client.ts  connections.ts  contentCreationService.ts  contentGeneration.ts  contentStrategy.ts  mockSeed.ts  notifications.ts  plans.ts  revenue.ts  schedules.ts  strategyOptimization.ts  trendResearch.ts
frontend/src/auth/: AuthContext.tsx  GuestRoute.tsx  ProtectedRoute.tsx
src/: __init__.py  analytics.py  brand.py  formatter.py  generation.py  policy.py  research.py  scheduler.py
(+560 files in other folders)
